Adjust failing tests