@@ -4921,31 +4921,41 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 	@SuppressWarnings({ "rawtypes" })
 	public void testBug566846_001() {
 		Map options = getCompilerOptions();
-		String error = 	this.complianceLevel < ClassFileConstants.JDK25 ?
-				"The preview feature Compact Source Files and Instance Main Methods is only available with source level 25 and above\n"
-				: "Compact Source Files and Instance Main Methods is a preview feature and disabled by default. Use --enable-preview to enable\n";
+		String error = 	this.complianceLevel >= ClassFileConstants.JDK25 ?
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	record X;\n" +
+				"	^^^^^^\n" +
+				"\'record\' is not a valid type name; it is a restricted identifier and not allowed as a type identifier in Java 16\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 1)\n" +
+				"	record X;\n" +
+				"	^\n" +
+				"Implicitly declared class must have a candidate main method\n" +
+				"----------\n" :
+					"----------\n" +
+					"1. ERROR in X.java (at line 1)\n" +
+					"	record X;\n" +
+					"	^\n" +
+					"The Java feature \'Compact Source Files and Instance Main Methods\' is only available with source level 25 and above\n" +
+					"----------\n" +
+					"2. ERROR in X.java (at line 1)\n" +
+					"	record X;\n" +
+					"	^^^^^^\n" +
+					"\'record\' is not a valid type name; it is a restricted identifier and not allowed as a type identifier in Java 16\n" +
+					"----------\n" +
+					"3. ERROR in X.java (at line 1)\n" +
+					"	record X;\n" +
+					"	^\n" +
+					"Implicitly declared class must have a candidate main method\n" +
+					"----------\n";
 
 		this.runNegativeTest(
 			new String[] {
 				"X.java",
 				"record X;\n",
 			},
-			"----------\n" +
-			"1. ERROR in X.java (at line 1)\n" +
-			"	record X;\n" +
-			"	^\n" +
-			error +
-			"----------\n" +
-			"2. ERROR in X.java (at line 1)\n" +
-			"	record X;\n" +
-			"	^^^^^^\n" +
-			"\'record\' is not a valid type name; it is a restricted identifier and not allowed as a type identifier in Java 16\n" +
-			"----------\n" +
-			"3. ERROR in X.java (at line 1)\n" +
-			"	record X;\n" +
-			"	^\n" +
-			"Implicitly declared class must have a candidate main method\n" +
-			"----------\n",
+			error,
 			null,
 			true,
 			options
